bug overflow mobile fixed

--- a/sass/composant/_accueil.scss
+++ b/sass/composant/_accueil.scss
@@ -1,11 +1,16 @@
+html, body{
+  overflow-x:hidden;
+  overflow-y:hidden;
+}
 body {
-  overflow-y: none;
-  overflow-x: none;
-  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position:relative;
   background-color: rgb(0, 0, 74);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  z-index: -1000;
 }
 html {
   padding: 0;
